--- a/src/index.css
+++ b/src/index.css
@@ -1,79 +1,109 @@
-body {
-    margin: 0;
-  }
-  
-  .top-pane {
-    background-color: hsl(225, 6%, 25%);
-  }
-  
-  .pane {
-    height: 50vh;
-    display: flex;
-  }
-  
-  .editor-container {
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    flex-direction: column;
-    padding: .5rem;
-    background-color: hsl(225, 6%, 25%);
-  }
-  
-  .editor-container.collapsed {
-    flex-grow: 0;
-  }
-  
-  .editor-container.collapsed .CodeMirror-scroll {
-    position: absolute;
-    overflow: hidden !important;
-  }
-  
-  .expand-collapse-btn {
-    margin-left: .5rem;
-    background: none;
-    border: none;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .editor-title {
-    display: flex;
-    justify-content: space-between;
-    background-color: hsl(225, 6%, 13%);
-    color: white;
-    padding: .5rem .5rem .5rem 1rem;
-    border-top-right-radius: .5rem;
-    border-top-left-radius: .5rem;
-  }
-  
-  .CodeMirror {
-    height: 100% !important;
-  }
-  
-  .code-mirror-wrapper {
-    flex-grow: 1;
-    border-bottom-right-radius: .5rem;
-    border-bottom-left-radius: .5rem;
-    overflow: hidden;
-  }
+/* src/index.css */
 
-  .header {
-    background-color: hsl(225, 6%, 13%);
-    color: white;
-    text-align: center;
-    padding: 1rem 0;
-    margin-bottom: 1rem;
-    border-bottom: 1px solid hsl(225, 6%, 20%);
-  }
-  
-  .header h1 {
-    font-size: 2rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .header p {
-    font-size: 1.2rem;
-    opacity: 0.8;
-  }
-  
+body {
+  margin: 0;
+}
+
+.header {
+  background-color: hsl(225, 6%, 13%);
+  color: white;
+  text-align: center;
+  padding: 1rem 0;
+  margin-bottom: 0rem;
+  border-bottom: 1px solid hsl(225, 6%, 20%);
+}
+
+.header h1 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.header p {
+  font-size: 1.2rem;
+  opacity: 0.8;
+}
+
+.try-sample {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: hsl(225, 6%, 25%);
+}
+
+.try-sample-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.clear-button {
+  margin-left: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: #c62525;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+}
+
+.clear-button:hover {
+  background-color: #555;
+}
+
+.pane {
+  height: 50vh;
+  display: flex;
+}
+
+.top-pane {
+  background-color: hsl(225, 6%, 25%);
+}
+
+.editor-container {
+  flex-grow: 1;
+  flex-basis: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  background-color: hsl(225, 6%, 25%);
+}
+
+.editor-container.collapsed {
+  flex-grow: 0;
+}
+
+.editor-container.collapsed .CodeMirror-scroll {
+  position: absolute;
+  overflow: hidden !important;
+}
+
+.expand-collapse-btn {
+  margin-left: 0.5rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.editor-title {
+  display: flex;
+  justify-content: space-between;
+  background-color: hsl(225, 6%, 13%);
+  color: white;
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
+  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+}
+
+.CodeMirror {
+  height: 100% !important;
+}
+
+.code-mirror-wrapper {
+  flex-grow: 1;
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  overflow: hidden;
+}
