--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
-/* src/index.css */
-
 body {
   margin: 0;
-  font-family: Arial, sans-serif; /* Ensure consistent font across devices */
-  background-color: hsl(225, 6%, 13%); /* Set background color */
+  font-family: Arial, sans-serif; 
+  background-color: hsl(225, 6%, 13%); 
 }
 
 .header {
@@ -29,7 +27,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0 1rem 1rem 1rem; 
   background-color: hsl(225, 6%, 25%);
 }
 
@@ -40,14 +38,14 @@ body {
 }
 
 .clear-button {
-  margin-top: 1rem; /* Increase top margin for spacing */
+  margin-top: 1rem; 
   padding: 0.5rem 1rem;
   background-color: #c62525;
   color: white;
   border: none;
   cursor: pointer;
   font-size: 1rem;
-  border-radius: 1rem; /* Rounded border radius */
+  border-radius: 1rem; 
 }
 
 .clear-button:hover {
@@ -58,12 +56,12 @@ body {
   height: 50vh;
   display: flex;
   background-color: hsl(225, 6%, 25%);
-  overflow: hidden; /* Ensure overflow is hidden initially */
+  overflow: hidden; 
 }
 
 .top-pane {
   background-color: hsl(225, 6%, 25%);
-  width: 100%; /* Ensure full width for top pane */
+  width: 100%; 
   display: flex;
 }
 
@@ -71,10 +69,10 @@ body {
   flex-grow: 1;
   padding: 0.5rem;
   background-color: hsl(225, 6%, 25%);
-  overflow: auto; /* Enable scrolling within the editor */
-  width: 100%; /* Ensure full width for editors */
-  max-width: 33.33%; /* Each editor occupies one-third of the width */
-  margin-right: 1rem; /* Right margin for spacing */
+  overflow: auto; 
+  width: 100%; 
+  max-width: 33.33%; 
+  margin-right: 1rem; 
 }
 
 .editor-container.collapsed {
@@ -112,23 +110,22 @@ body {
   flex-grow: 1;
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
-  overflow: auto; /* Enable scrolling within the editor */
+  overflow: auto; 
 }
 
 .output {
-  background-color: #f0f0f0; /* Gray background color for the output box */
+  background-color: #f0f0f0; 
   padding: 1rem;
-  overflow: auto; /* Allow scrolling if content exceeds height */
-  flex-grow: 1; /* Allow the output area to grow */
+  overflow: auto; 
+  flex-grow: 1; 
 }
 
-/* Media query for mobile devices */
 @media (max-width: 768px) {
   .pane {
-    flex-direction: column; /* Stack editors vertically on mobile screens */
+    flex-direction: column; 
   }
   .editor-container {
-    max-width: 100%; /* Full width for editors on mobile */
-    margin-right: 0; /* Remove right margin on small screens */
+    max-width: 100%; 
+    margin-right: 0; 
   }
 }
